--- a/app/src/main/res/layout/fragment_tv_show.xml
+++ b/app/src/main/res/layout/fragment_tv_show.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="@color/colorPrimaryDark"
-             tools:context=".utama.fragment.tv.TvShowFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".utama.fragment.movies.MoviesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:scrollbars="vertical"
+            android:id="@+id/rv_tv"
+            android:layout_height="wrap_content"/>
 
-</FrameLayout>
+</LinearLayout>
